fixed problem with Hibernate Enums (needed static on findByCode)